--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <input id="loginPass" type="password" placeholder="Mật khẩu"><br>
   <button id="btnLogin">Đăng nhập</button>
   <p id="output"></p>
-  <p>Chưa có tài khoản? <a href="/register.html">Đăng ký ngay</a></p>
+  <p>Chưa có tài khoản? <a href="register.html">Đăng ký ngay</a></p>
 
   <script>
     document.getElementById("btnLogin").addEventListener("click", async () => {
