--- a/home.html
+++ b/home.html
@@ -75,14 +75,14 @@
     const username = localStorage.getItem("username");
     
     if (!username) {
-      window.location.href = "/";
+      window.location.href = "index.html";
     } else {
       document.getElementById("user").textContent = username;
     }
 
     document.getElementById("logout").addEventListener("click", () => {
       localStorage.removeItem("username");
-      window.location.href = "/";
+      window.location.href = "index.html";
     });
 
     async function loadUsers() {
