--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
   <input id="regPass" type="password" placeholder="Mật khẩu"><br>
   <button id="btnRegister">Đăng ký</button>
   <p id="output"></p>
-  <p>Đã có tài khoản? <a href="/">Đăng nhập tại đây</a></p>
+  <p>Đã có tài khoản? <a href="index.html">Đăng nhập tại đây</a></p>
 
   <script>
     document.getElementById("btnRegister").addEventListener("click", async () => {
