--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       const data = await res.json();
       if (res.ok) {
         localStorage.setItem("username", data.username);
-        window.location.href = "/home";
+        window.location.href = "home.html";
       } else {
         document.getElementById("output").textContent = data.message;
       }
