--- a/index.html
+++ b/index.html
@@ -2,20 +2,158 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Đăng nhập</title>
+  <title>Ứng dụng của tôi</title>
+  <style>
+    /* CSS chung cho toàn bộ ứng dụng */
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f0f2f5;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+    .container {
+      max-width: 600px;
+      margin: 20px auto;
+      background-color: #ffffff;
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    }
+    /* Ẩn tất cả các trang theo mặc định */
+    .page {
+      display: none;
+    }
+    /* Các thành phần input, button chung */
+    input[type="text"], input[type="password"] {
+      width: calc(100% - 20px);
+      padding: 10px;
+      margin-bottom: 10px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+    }
+    button {
+      background-color: #1a73e8;
+      color: white;
+      border: none;
+      padding: 12px 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background-color: #186bd6;
+    }
+    a {
+      color: #1a73e8;
+      cursor: pointer;
+    }
+    /* CSS riêng cho trang chủ */
+    #page-home h1 {
+      color: #1a73e8;
+      border-bottom: 2px solid #e0e0e0;
+      padding-bottom: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    #logout {
+      background-color: #d9534f;
+      font-size: 14px;
+      padding: 10px 15px;
+    }
+    #logout:hover {
+      background-color: #c9302c;
+    }
+    #userList {
+      list-style-type: none; padding-left: 0;
+    }
+    #userList li {
+      background-color: #fafafa;
+      padding: 12px;
+      margin-bottom: 8px;
+      border-radius: 6px;
+      border: 1px solid #eee;
+    }
+  </style>
 </head>
 <body>
-  <h1>Trang Đăng nhập</h1>
-  <input id="loginUser" placeholder="Tên đăng nhập"><br>
-  <input id="loginPass" type="password" placeholder="Mật khẩu"><br>
-  <button id="btnLogin">Đăng nhập</button>
-  <p id="output"></p>
-  <p>Chưa có tài khoản? <a href="register.html">Đăng ký ngay</a></p>
+
+  <section id="page-login" class="page container">
+    <h1>Đăng nhập</h1>
+    <input id="loginUser" placeholder="Tên đăng nhập"><br>
+    <input id="loginPass" type="password" placeholder="Mật khẩu"><br>
+    <button id="btnLogin">Đăng nhập</button>
+    <p id="loginOutput" style="color: red;"></p>
+    <p>Chưa có tài khoản? <a id="linkGoToRegister">Đăng ký ngay</a></p>
+  </section>
+
+  <section id="page-register" class="page container">
+    <h1>Tạo tài khoản mới</h1>
+    <input id="regUser" placeholder="Tên đăng nhập"><br>
+    <input id="regPass" type="password" placeholder="Mật khẩu"><br>
+    <button id="btnRegister">Đăng ký</button>
+    <p id="registerOutput"></p>
+    <p>Đã có tài khoản? <a id="linkGoToLogin">Đăng nhập tại đây</a></p>
+  </section>
+
+  <section id="page-home" class="page container">
+    <h1>Xin chào <span id="user">...</span> <button id="logout">Đăng xuất</button></h1>
+    <h2>Danh sách thành viên</h2>
+    <ul id="userList">
+      <li>Đang tải danh sách...</li>
+    </ul>
+  </section>
+
 
   <script>
-    document.getElementById("btnLogin").addEventListener("click", async () => {
-      const username = document.getElementById("loginUser").value;
-      const password = document.getElementById("loginPass").value;
+    // Lấy tham chiếu đến các trang
+    const pageLogin = document.getElementById("page-login");
+    const pageRegister = document.getElementById("page-register");
+    const pageHome = document.getElementById("page-home");
+
+    // Lấy tham chiếu đến các nút
+    const btnLogin = document.getElementById("btnLogin");
+    const btnRegister = document.getElementById("btnRegister");
+    const btnLogout = document.getElementById("logout");
+    const linkGoToRegister = document.getElementById("linkGoToRegister");
+    const linkGoToLogin = document.getElementById("linkGoToLogin");
+
+    // Lấy tham chiếu đến các ô input/output
+    const loginUser = document.getElementById("loginUser");
+    const loginPass = document.getElementById("loginPass");
+    const loginOutput = document.getElementById("loginOutput");
+    const regUser = document.getElementById("regUser");
+    const regPass = document.getElementById("regPass");
+    const registerOutput = document.getElementById("registerOutput");
+    const userSpan = document.getElementById("user");
+    const userListElement = document.getElementById("userList");
+
+    /**
+     * Hàm chính: Ẩn tất cả các trang và chỉ hiện trang được yêu cầu
+     */
+    function showPage(pageId) {
+      pageLogin.style.display = "none";
+      pageRegister.style.display = "none";
+      pageHome.style.display = "none";
+
+      if (pageId === "page-login") {
+        pageLogin.style.display = "block";
+      } else if (pageId === "page-register") {
+        pageRegister.style.display = "block";
+      } else if (pageId === "page-home") {
+        pageHome.style.display = "block";
+        // Khi hiện trang chủ, tự động tải danh sách user
+        loadUsers();
+        userSpan.textContent = localStorage.getItem("username");
+      }
+    }
+
+    // --- CÁC HÀM GỌI API (Fetch) ---
+
+    async function handleLogin() {
+      const username = loginUser.value;
+      const password = loginPass.value;
 
       const res = await fetch("/login", {
         method: "POST",
@@ -26,12 +164,80 @@
       const data = await res.json();
       if (res.ok) {
         localStorage.setItem("username", data.username);
-        window.location.href = "home.html";
+        loginPass.value = ""; // Xóa mật khẩu
+        loginOutput.textContent = ""; // Xóa thông báo lỗi
+        showPage("page-home"); // Chuyển sang trang chủ
       } else {
-        document.getElementById("output").textContent = data.message;
+        loginOutput.textContent = data.message;
       }
-    });
+    }
+
+    async function handleRegister() {
+      const username = regUser.value;
+      const password = regPass.value;
+
+      const res = await fetch("/register", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ username, password })
+      });
+
+      const data = await res.json();
+      registerOutput.textContent = data.message;
+
+      if (res.ok) {
+        regUser.value = "";
+        regPass.value = "";
+        setTimeout(() => {
+          registerOutput.textContent = ""; // Xóa thông báo
+          showPage("page-login"); // Chuyển về trang đăng nhập
+        }, 2000);
+      }
+    }
+
+    function handleLogout() {
+      localStorage.removeItem("username");
+      showPage("page-login");
+    }
+
+    async function loadUsers() {
+      userListElement.innerHTML = "<li>Đang tải danh sách...</li>";
+      try {
+        const res = await fetch("/api/users");
+        if (!res.ok) throw new Error("Không thể tải danh sách");
+        
+        const users = await res.json();
+        userListElement.innerHTML = ""; 
+
+        if (users.length === 0) {
+          userListElement.innerHTML = "<li>Chưa có thành viên nào.</li>";
+          return;
+        }
+        users.forEach(user => {
+          const li = document.createElement("li");
+          li.textContent = user.username;
+          userListElement.appendChild(li);
+        });
+      } catch (error) {
+        userListElement.innerHTML = `<li>Lỗi: ${error.message}</li>`;
+      }
+    }
+
+    // --- GẮN CÁC SỰ KIỆN ---
+    btnLogin.addEventListener("click", handleLogin);
+    btnRegister.addEventListener("click", handleRegister);
+    btnLogout.addEventListener("click", handleLogout);
+    linkGoToRegister.addEventListener("click", () => showPage("page-register"));
+    linkGoToLogin.addEventListener("click", () => showPage("page-login"));
+
+    // --- KHỞI ĐỘNG ỨNG DỤNG ---
+    // Kiểm tra xem user đã đăng nhập chưa
+    if (localStorage.getItem("username")) {
+      showPage("page-home");
+    } else {
+      showPage("page-login");
+    }
+
   </script>
 </body>
 </html>
-
